--- a/index.html
+++ b/index.html
@@ -88,8 +88,33 @@
             <div class="d-flex flex-column flex-sm-row gap-2">
               <a class="btn btn-success zw-btn btn-lg" href="home-2.html"><i class="bi bi-map me-2"></i>Find Refill Stations</a>
               <a class="btn btn-outline-success zw-btn-outline btn-lg" href="services.html"><i class="bi bi-bag-heart me-2"></i>Browse Eco Services</a>
+              <button class="btn btn-outline-secondary btn-lg" type="button" data-bs-toggle="modal" data-bs-target="#demoModal"><i class="bi bi-play-circle me-2"></i>Open Demo</button>
             </div>
-            <p class="zw-form-hint mt-3 mb-0">Tip: Use the top-right toggle to switch Light/Dark and LTR/RTL.</p>
+            <div class="row g-2 mt-4">
+              <div class="col-6 col-md-4">
+                <div class="zw-card p-3 text-center">
+                  <div class="h3 fw-bold mb-0">10k+</div>
+                  <div class="text-secondary">Happy customers</div>
+                </div>
+              </div>
+              <div class="col-6 col-md-4">
+                <div class="zw-card p-3 text-center">
+                  <div class="h3 fw-bold mb-0">120+</div>
+                  <div class="text-secondary">Refill partners</div>
+                </div>
+              </div>
+              <div class="col-12 col-md-4">
+                <div class="zw-card p-3 text-center">
+                  <div class="h3 fw-bold mb-0">13</div>
+                  <div class="text-secondary">Cities supported</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="d-flex flex-wrap gap-2 mt-3">
+              <button class="btn btn-sm btn-outline-secondary" type="button" data-bs-toggle="modal" data-bs-target="#whyModal"><i class="bi bi-lightbulb me-1"></i>Why it works</button>
+              <span class="zw-form-hint">Tip: Use the top-right toggle to switch Light/Dark and LTR/RTL.</span>
+            </div>
           </div>
           <div class="col-lg-6">
             <div class="zw-map-placeholder d-flex align-items-center justify-content-center p-4">
@@ -475,6 +500,86 @@
   <button class="btn btn-success zw-btn zw-backtotop" type="button" aria-label="Back to top" data-back-to-top>
     <i class="bi bi-arrow-up"></i>
   </button>
+
+  <div class="modal fade" id="demoModal" tabindex="-1" aria-labelledby="demoModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="demoModalLabel">Try a Quick Demo</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p class="text-secondary mb-3">Get a demo link (static example). Enter your email and we’ll show how refill booking + eco delivery works.</p>
+          <form class="d-grid gap-2" action="#">
+            <label class="visually-hidden" for="demoEmail">Email</label>
+            <input id="demoEmail" type="email" class="form-control" placeholder="you@example.com" />
+            <button type="button" class="btn btn-success zw-btn">Send Demo Link</button>
+            <p class="zw-form-hint mb-0">This is a static demo form. Connect to backend later.</p>
+          </form>
+          <hr class="my-3" />
+          <div class="d-grid gap-2">
+            <a class="btn btn-outline-success zw-btn-outline" href="home-2.html"><i class="bi bi-geo-alt me-2"></i>Explore Locator UI</a>
+            <a class="btn btn-outline-secondary" href="pricing.html"><i class="bi bi-tags me-2"></i>See Memberships</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="whyModal" tabindex="-1" aria-labelledby="whyModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="whyModalLabel">Why this homepage works</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="row g-3">
+            <div class="col-md-6">
+              <div class="zw-card p-3 h-100">
+                <div class="d-flex gap-2 align-items-center mb-2">
+                  <span class="zw-icon-circle"><i class="bi bi-compass"></i></span>
+                  <strong>Stay flexible</strong>
+                </div>
+                <p class="text-secondary mb-0">A homepage can still convert. Keep useful links, but make the primary action easy to spot.</p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="zw-card p-3 h-100">
+                <div class="d-flex gap-2 align-items-center mb-2">
+                  <span class="zw-icon-circle"><i class="bi bi-pin-angle"></i></span>
+                  <strong>Floating navigation</strong>
+                </div>
+                <p class="text-secondary mb-0">Your navbar stays visible and keeps the primary CTA (Demo) within reach at all times.</p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="zw-card p-3 h-100">
+                <div class="d-flex gap-2 align-items-center mb-2">
+                  <span class="zw-icon-circle"><i class="bi bi-bar-chart"></i></span>
+                  <strong>The numbers don’t lie</strong>
+                </div>
+                <p class="text-secondary mb-0">Above-the-fold social proof (customers, partners, cities) builds trust fast.</p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="zw-card p-3 h-100">
+                <div class="d-flex gap-2 align-items-center mb-2">
+                  <span class="zw-icon-circle"><i class="bi bi-window"></i></span>
+                  <strong>Smart lightboxes</strong>
+                </div>
+                <p class="text-secondary mb-0">Extra details live in modals so the page stays clean while still answering questions.</p>
+              </div>
+            </div>
+          </div>
+          <div class="mt-3 d-flex flex-wrap gap-2">
+            <button class="btn btn-success zw-btn" type="button" data-bs-dismiss="modal" data-bs-toggle="modal" data-bs-target="#demoModal">Open Demo</button>
+            <a class="btn btn-outline-success zw-btn-outline" href="service-details.html">Refill FAQs</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/main.js"></script>
