--- a/blog.html
+++ b/blog.html
@@ -1,15 +1,18 @@
 <!doctype html>
 <html lang="en" dir="ltr" data-bs-theme="light">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Zero-waste blog: tips, sustainable lifestyle guides, and product recommendations." />
+  <meta name="description"
+    content="Zero-waste blog: tips, sustainable lifestyle guides, and product recommendations." />
   <title>ZeroWaste Store - Blog</title>
-  <link rel="icon" href="assets/images/favicon.png" />
+  <link rel="icon" href="assets/images/favicon.svg" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet" />
   <link href="assets/css/style.css" rel="stylesheet" />
 </head>
+
 <body>
   <header class="zw-navbar sticky-top">
     <nav class="navbar navbar-expand-lg">
@@ -20,7 +23,8 @@
         </a>
 
         <div class="d-flex align-items-center gap-2 order-lg-2">
-          <button type="button" class="btn btn-sm btn-outline-secondary" data-dir-toggle aria-label="Toggle direction" data-dir-btn>LTR</button>
+          <button type="button" class="btn btn-sm btn-outline-secondary" data-dir-toggle aria-label="Toggle direction"
+            data-dir-btn>LTR</button>
           <button type="button" class="btn btn-sm btn-outline-secondary" data-theme-toggle aria-label="Toggle theme">
             <i class="bi bi-sun" data-theme-icon></i>
           </button>
@@ -28,7 +32,8 @@
           <a class="btn btn-sm btn-outline-success zw-btn-outline d-none d-lg-inline-flex" href="login.html">Login</a>
           <a class="btn btn-sm btn-success zw-btn d-none d-lg-inline-flex" href="register.html">Signup</a>
 
-          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNav" aria-controls="offcanvasNav" aria-label="Open menu">
+          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNav"
+            aria-controls="offcanvasNav" aria-label="Open menu">
             <span class="navbar-toggler-icon"></span>
           </button>
         </div>
@@ -36,7 +41,7 @@
         <div class="collapse navbar-collapse order-lg-1" id="navbarNav">
           <ul class="navbar-nav mx-lg-auto gap-lg-1">
             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="home-2.html">Refill Locator</a></li>
+            <li class="nav-item"><a class="nav-link" href="home-2.html">Refill</a></li>
             <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
             <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
             <li class="nav-item"><a class="nav-link active" href="blog.html">Blog</a></li>
@@ -56,11 +61,12 @@
         <div class="d-grid gap-2 mb-3">
           <a class="btn btn-outline-success zw-btn-outline" href="login.html">Login</a>
           <a class="btn btn-success zw-btn" href="register.html">Signup</a>
-          <a class="btn btn-outline-secondary" href="dashboard.html"><i class="bi bi-speedometer2 me-1"></i> Admin Dashboard</a>
+          <a class="btn btn-outline-secondary" href="dashboard.html"><i class="bi bi-speedometer2 me-1"></i> Admin
+            Dashboard</a>
         </div>
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="home-2.html">Refill Locator</a></li>
+          <li class="nav-item"><a class="nav-link" href="home-2.html">Refill</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
           <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
           <li class="nav-item"><a class="nav-link" href="service-details.html">Service Details</a></li>
@@ -104,73 +110,101 @@
     <section class="py-5">
       <div class="container">
         <div class="row g-3">
-          <div class="col-md-6 col-lg-4" data-filter-card data-tag="tips" data-haystack="10 beginner zero-waste swaps reusable bottle bag">
+          <div class="col-md-6 col-lg-4" data-filter-card data-tag="tips"
+            data-haystack="10 beginner zero-waste swaps reusable bottle bag">
             <article class="zw-card p-4 h-100">
+              <div class="zw-card-img-wrapper">
+                <img src="https://images.unsplash.com/photo-1542601906990-b4d3fb778b09?auto=format&fit=crop&q=80&w=800"
+                  class="zw-card-img-top" alt="Zero-waste eco swaps">
+              </div>
               <div class="d-flex align-items-center justify-content-between gap-3">
                 <span class="badge rounded-pill zw-badge-secondary">Zero-waste tips</span>
                 <small class="text-secondary">5 min read</small>
               </div>
-              <h2 class="h5 mt-3">10 Beginner Swaps That Actually Stick</h2>
+              <h2 class="h5 mt-3">10 Beginner Swaps That Will Actually Stick</h2>
               <p class="text-secondary">Start with one swap per week: bottle, bag, cup, and refill habits.</p>
               <a class="btn btn-sm btn-success zw-btn" href="blog-details.html">Read More</a>
             </article>
           </div>
 
-          <div class="col-md-6 col-lg-4" data-filter-card data-tag="lifestyle" data-haystack="refill routine weekly plan sustainable lifestyle pantry">
+          <div class="col-md-6 col-lg-4" data-filter-card data-tag="lifestyle"
+            data-haystack="refill routine weekly plan sustainable lifestyle pantry">
             <article class="zw-card p-4 h-100">
+              <div class="zw-card-img-wrapper">
+                <img src="assets/images/Pantry.jfif" class="zw-card-img-top" alt="Organized pantry with jars">
+              </div>
               <div class="d-flex align-items-center justify-content-between gap-3">
                 <span class="badge rounded-pill zw-badge-secondary">Sustainable lifestyle</span>
                 <small class="text-secondary">7 min read</small>
               </div>
-              <h2 class="h5 mt-3">Build a Refill Routine (Without Stress)</h2>
+              <h2 class="h5 mt-3">Build-Up a New Refill Routine (Without Stress)</h2>
               <p class="text-secondary">A simple weekly schedule for refills, bulk pantry, and delivery days.</p>
               <a class="btn btn-sm btn-success zw-btn" href="blog-details.html">Read More</a>
             </article>
           </div>
 
-          <div class="col-md-6 col-lg-4" data-filter-card data-tag="plasticfree" data-haystack="plastic-free bathroom shampoo soap refill">
+          <div class="col-md-6 col-lg-4" data-filter-card data-tag="plasticfree"
+            data-haystack="plastic-free bathroom shampoo soap refill">
             <article class="zw-card p-4 h-100">
+              <div class="zw-card-img-wrapper">
+                <img src="https://images.unsplash.com/photo-1620916566398-39f1143ab7be?auto=format&fit=crop&q=80&w=800"
+                  class="zw-card-img-top" alt="Eco-friendly bathroom essentials">
+              </div>
               <div class="d-flex align-items-center justify-content-between gap-3">
                 <span class="badge rounded-pill zw-badge-secondary">Plastic-free living</span>
                 <small class="text-secondary">6 min read</small>
               </div>
-              <h2 class="h5 mt-3">Plastic-Free Bathroom Essentials</h2>
+              <h2 class="h5 mt-3">Plastic-Free And Eco-Friendly Bathroom Essentials</h2>
               <p class="text-secondary">Refill shampoo, switch to bar soap, and simplify your daily routine.</p>
               <a class="btn btn-sm btn-success zw-btn" href="blog-details.html">Read More</a>
             </article>
           </div>
 
-          <div class="col-md-6 col-lg-4" data-filter-card data-tag="guides" data-haystack="guide bulk shopping jars labels storage">
+          <div class="col-md-6 col-lg-4" data-filter-card data-tag="guides"
+            data-haystack="guide bulk shopping jars labels storage">
             <article class="zw-card p-4 h-100">
+              <div class="zw-card-img-wrapper">
+                <img src="assets/images/glassjar.jfif" class="zw-card-img-top" alt="Glass jars for bulk storage">
+              </div>
               <div class="d-flex align-items-center justify-content-between gap-3">
                 <span class="badge rounded-pill zw-badge-secondary">Product guides</span>
                 <small class="text-secondary">8 min read</small>
               </div>
-              <h2 class="h5 mt-3">Bulk Shopping: Jars, Labels, and Storage</h2>
+              <h2 class="h5 mt-3">Bulk Shopping Guide: Jars, Labels, and Storage</h2>
               <p class="text-secondary">A beginner guide to choose containers and store grains neatly.</p>
               <a class="btn btn-sm btn-success zw-btn" href="blog-details.html">Read More</a>
             </article>
           </div>
 
-          <div class="col-md-6 col-lg-4" data-filter-card data-tag="tips" data-haystack="refill etiquette clean containers weigh tare">
+          <div class="col-md-6 col-lg-4" data-filter-card data-tag="tips"
+            data-haystack="refill etiquette clean containers weigh tare">
             <article class="zw-card p-4 h-100">
+              <div class="zw-card-img-wrapper">
+                <img src="https://images.unsplash.com/photo-1610348725531-843dff563e2c?auto=format&fit=crop&q=80&w=800"
+                  class="zw-card-img-top" alt="Eco-friendly shopping habits">
+              </div>
               <div class="d-flex align-items-center justify-content-between gap-3">
                 <span class="badge rounded-pill zw-badge-secondary">Zero-waste tips</span>
                 <small class="text-secondary">4 min read</small>
               </div>
-              <h2 class="h5 mt-3">Refill Etiquette: Tare, Clean, Refill</h2>
+              <h2 class="h5 mt-3">Refill Etiquette Stores for Tare, Clean and Refill</h2>
               <p class="text-secondary">Quick steps to make refilling smooth for you and partner stores.</p>
               <a class="btn btn-sm btn-success zw-btn" href="blog-details.html">Read More</a>
             </article>
           </div>
 
-          <div class="col-md-6 col-lg-4" data-filter-card data-tag="lifestyle" data-haystack="eco delivery reusable crate return system">
+          <div class="col-md-6 col-lg-4" data-filter-card data-tag="lifestyle"
+            data-haystack="eco delivery reusable crate return system">
             <article class="zw-card p-4 h-100">
+              <div class="zw-card-img-wrapper">
+                <img src="https://images.unsplash.com/photo-1574943320219-553eb213f72d?auto=format&fit=crop&q=80&w=800"
+                  class="zw-card-img-top" alt="Reusable delivery system">
+              </div>
               <div class="d-flex align-items-center justify-content-between gap-3">
                 <span class="badge rounded-pill zw-badge-secondary">Sustainable lifestyle</span>
                 <small class="text-secondary">5 min read</small>
               </div>
-              <h2 class="h5 mt-3">How Reusable Delivery Crates Work</h2>
+              <h2 class="h5 mt-3">How The Reusable Delivery Crates Will Work</h2>
               <p class="text-secondary">A simple return loop that reduces packaging—perfect for regular orders.</p>
               <a class="btn btn-sm btn-success zw-btn" href="blog-details.html">Read More</a>
             </article>
@@ -251,4 +285,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/main.js"></script>
 </body>
+
 </html>
