--- a/about.html
+++ b/about.html
@@ -1,15 +1,17 @@
 <!doctype html>
 <html lang="en" dir="ltr" data-bs-theme="light">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Learn about ZeroWaste Store mission, vision, and sustainability goals." />
   <title>ZeroWaste Store - About</title>
-  <link rel="icon" href="assets/images/favicon.png" />
+  <link rel="icon" href="assets/images/favicon.svg" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet" />
   <link href="assets/css/style.css" rel="stylesheet" />
 </head>
+
 <body>
   <header class="zw-navbar sticky-top">
     <nav class="navbar navbar-expand-lg">
@@ -20,7 +22,8 @@
         </a>
 
         <div class="d-flex align-items-center gap-2 order-lg-2">
-          <button type="button" class="btn btn-sm btn-outline-secondary" data-dir-toggle aria-label="Toggle direction" data-dir-btn>LTR</button>
+          <button type="button" class="btn btn-sm btn-outline-secondary" data-dir-toggle aria-label="Toggle direction"
+            data-dir-btn>LTR</button>
           <button type="button" class="btn btn-sm btn-outline-secondary" data-theme-toggle aria-label="Toggle theme">
             <i class="bi bi-sun" data-theme-icon></i>
           </button>
@@ -28,7 +31,8 @@
           <a class="btn btn-sm btn-outline-success zw-btn-outline d-none d-lg-inline-flex" href="login.html">Login</a>
           <a class="btn btn-sm btn-success zw-btn d-none d-lg-inline-flex" href="register.html">Signup</a>
 
-          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNav" aria-controls="offcanvasNav" aria-label="Open menu">
+          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNav"
+            aria-controls="offcanvasNav" aria-label="Open menu">
             <span class="navbar-toggler-icon"></span>
           </button>
         </div>
@@ -36,7 +40,7 @@
         <div class="collapse navbar-collapse order-lg-1" id="navbarNav">
           <ul class="navbar-nav mx-lg-auto gap-lg-1">
             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="home-2.html">Refill Locator</a></li>
+            <li class="nav-item"><a class="nav-link" href="home-2.html">Refill</a></li>
             <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
             <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
             <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
@@ -56,11 +60,12 @@
         <div class="d-grid gap-2 mb-3">
           <a class="btn btn-outline-success zw-btn-outline" href="login.html">Login</a>
           <a class="btn btn-success zw-btn" href="register.html">Signup</a>
-          <a class="btn btn-outline-secondary" href="dashboard.html"><i class="bi bi-speedometer2 me-1"></i> Admin Dashboard</a>
+          <a class="btn btn-outline-secondary" href="dashboard.html"><i class="bi bi-speedometer2 me-1"></i> Admin
+            Dashboard</a>
         </div>
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="home-2.html">Refill Locator</a></li>
+          <li class="nav-item"><a class="nav-link" href="home-2.html">Refill</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
           <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
           <li class="nav-item"><a class="nav-link" href="service-details.html">Service Details</a></li>
@@ -79,7 +84,8 @@
         <div class="row g-4 align-items-center">
           <div class="col-lg-7">
             <h1 class="display-6 fw-bold mb-2">Our Mission: Refill & Reuse for Everyone</h1>
-            <p class="lead text-secondary mb-0">We make sustainable shopping simple through refill station discovery and low-waste product delivery.</p>
+            <p class="lead text-secondary mb-0">We make sustainable shopping simple through refill station discovery and
+              low-waste product delivery.</p>
           </div>
           <div class="col-lg-5">
             <div class="zw-card p-4">
@@ -87,7 +93,8 @@
                 <span class="zw-icon-circle"><i class="bi bi-leaf"></i></span>
                 <div>
                   <h2 class="h6 mb-1">Quick Snapshot</h2>
-                  <p class="text-secondary mb-0">Local refill partners, transparent pricing, and beginner-friendly guidance.</p>
+                  <p class="text-secondary mb-0">Local refill partners, transparent pricing, and beginner-friendly
+                    guidance.</p>
                 </div>
               </div>
               <div class="d-grid gap-2 mt-3">
@@ -106,22 +113,26 @@
           <div class="col-lg-4">
             <div class="zw-card p-4 h-100">
               <h2 class="h5 zw-section-title">Vision</h2>
-              <p class="text-secondary mb-0">A world where refilling is normal, packaging is minimal, and sustainable choices are accessible for all.</p>
+              <p class="text-secondary mb-0">A world where refilling is normal, packaging is minimal, and sustainable
+                choices are accessible for all.</p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="zw-card p-4 h-100">
               <h2 class="h5 zw-section-title">Mission</h2>
-              <p class="text-secondary mb-0">Connect people to nearby refill points and deliver eco essentials with reduced waste.</p>
+              <p class="text-secondary mb-0">Connect people to nearby refill points and deliver eco essentials with
+                reduced waste.</p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="zw-card p-4 h-100">
               <h2 class="h5 zw-section-title">Values</h2>
               <div class="d-grid gap-2">
-                <div class="d-flex gap-2"><i class="bi bi-check2-circle text-success"></i><span>Transparency</span></div>
+                <div class="d-flex gap-2"><i class="bi bi-check2-circle text-success"></i><span>Transparency</span>
+                </div>
                 <div class="d-flex gap-2"><i class="bi bi-check2-circle text-success"></i><span>Community</span></div>
-                <div class="d-flex gap-2"><i class="bi bi-check2-circle text-success"></i><span>Practical Sustainability</span></div>
+                <div class="d-flex gap-2"><i class="bi bi-check2-circle text-success"></i><span>Practical
+                    Sustainability</span></div>
               </div>
             </div>
           </div>
@@ -131,7 +142,8 @@
           <div class="col-lg-7">
             <div class="zw-card p-4 h-100">
               <h2 class="h4 zw-section-title">Why Zero-Waste Matters</h2>
-              <p class="text-secondary">Small daily changes add up. Refilling reduces plastic, bulk buying lowers packaging, and responsible delivery cuts emissions.</p>
+              <p class="text-secondary">Small daily changes add up. Refilling reduces plastic, bulk buying lowers
+                packaging, and responsible delivery cuts emissions.</p>
               <div class="d-grid gap-3">
                 <div class="d-flex gap-3">
                   <span class="zw-icon-circle"><i class="bi bi-recycle"></i></span>
@@ -261,4 +273,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/main.js"></script>
 </body>
+
 </html>
