--- a/blog-details.html
+++ b/blog-details.html
@@ -1,15 +1,17 @@
 <!doctype html>
 <html lang="en" dir="ltr" data-bs-theme="light">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Blog article about zero-waste living and refill culture." />
   <title>ZeroWaste Store - Blog Details</title>
-  <link rel="icon" href="assets/images/favicon.png" />
+  <link rel="icon" href="assets/images/favicon.svg" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet" />
   <link href="assets/css/style.css" rel="stylesheet" />
 </head>
+
 <body>
   <header class="zw-navbar sticky-top">
     <nav class="navbar navbar-expand-lg">
@@ -20,7 +22,8 @@
         </a>
 
         <div class="d-flex align-items-center gap-2 order-lg-2">
-          <button type="button" class="btn btn-sm btn-outline-secondary" data-dir-toggle aria-label="Toggle direction" data-dir-btn>LTR</button>
+          <button type="button" class="btn btn-sm btn-outline-secondary" data-dir-toggle aria-label="Toggle direction"
+            data-dir-btn>LTR</button>
           <button type="button" class="btn btn-sm btn-outline-secondary" data-theme-toggle aria-label="Toggle theme">
             <i class="bi bi-sun" data-theme-icon></i>
           </button>
@@ -28,7 +31,8 @@
           <a class="btn btn-sm btn-outline-success zw-btn-outline d-none d-lg-inline-flex" href="login.html">Login</a>
           <a class="btn btn-sm btn-success zw-btn d-none d-lg-inline-flex" href="register.html">Signup</a>
 
-          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNav" aria-controls="offcanvasNav" aria-label="Open menu">
+          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNav"
+            aria-controls="offcanvasNav" aria-label="Open menu">
             <span class="navbar-toggler-icon"></span>
           </button>
         </div>
@@ -36,7 +40,7 @@
         <div class="collapse navbar-collapse order-lg-1" id="navbarNav">
           <ul class="navbar-nav mx-lg-auto gap-lg-1">
             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="home-2.html">Refill Locator</a></li>
+            <li class="nav-item"><a class="nav-link" href="home-2.html">Refill</a></li>
             <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
             <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
             <li class="nav-item"><a class="nav-link active" href="blog.html">Blog</a></li>
@@ -56,11 +60,12 @@
         <div class="d-grid gap-2 mb-3">
           <a class="btn btn-outline-success zw-btn-outline" href="login.html">Login</a>
           <a class="btn btn-success zw-btn" href="register.html">Signup</a>
-          <a class="btn btn-outline-secondary" href="dashboard.html"><i class="bi bi-speedometer2 me-1"></i> Admin Dashboard</a>
+          <a class="btn btn-outline-secondary" href="dashboard.html"><i class="bi bi-speedometer2 me-1"></i> Admin
+            Dashboard</a>
         </div>
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="home-2.html">Refill Locator</a></li>
+          <li class="nav-item"><a class="nav-link" href="home-2.html">Refill</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
           <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
           <li class="nav-item"><a class="nav-link" href="service-details.html">Service Details</a></li>
@@ -80,7 +85,8 @@
           <div class="col-lg-8">
             <a class="text-decoration-none" href="blog.html"><i class="bi bi-arrow-left me-2"></i>Back to Blog</a>
             <h1 class="display-6 fw-bold mt-3 mb-2">10 Beginner Swaps That Actually Stick</h1>
-            <p class="text-secondary mb-0">Simple low-waste actions you can maintain. Start small, repeat weekly, and build confidence.</p>
+            <p class="text-secondary mb-0">Simple low-waste actions you can maintain. Start small, repeat weekly, and
+              build confidence.</p>
             <div class="d-flex flex-wrap gap-3 mt-3">
               <span class="badge rounded-pill zw-badge-secondary">Zero-waste tips</span>
               <span class="text-secondary"><i class="bi bi-clock me-1"></i>5 min read</span>
@@ -107,12 +113,14 @@
           <div class="col-lg-8">
             <article class="zw-card p-4 p-lg-5">
               <h2 class="h4 zw-section-title">Why small swaps work</h2>
-              <p class="text-secondary">Big lifestyle changes often fail because they are too difficult to maintain. Small changes feel easy, and easy actions become habits.</p>
+              <p class="text-secondary">Big lifestyle changes often fail because they are too difficult to maintain.
+                Small changes feel easy, and easy actions become habits.</p>
 
               <div class="d-grid gap-4 mt-4">
                 <section>
                   <h3 class="h5 mb-2">1) Carry a reusable bottle</h3>
-                  <p class="text-secondary mb-0">Refill at home and avoid buying single-use bottles. Keep one bottle in your bag.</p>
+                  <p class="text-secondary mb-0">Refill at home and avoid buying single-use bottles. Keep one bottle in
+                    your bag.</p>
                 </section>
                 <section>
                   <h3 class="h5 mb-2">2) Switch to refillable soap</h3>
@@ -124,7 +132,8 @@
                 </section>
                 <section>
                   <h3 class="h5 mb-2">4) Try one low-waste delivery order</h3>
-                  <p class="text-secondary mb-0">Order a few essentials and choose minimal packaging. Notice how much waste you avoided.</p>
+                  <p class="text-secondary mb-0">Order a few essentials and choose minimal packaging. Notice how much
+                    waste you avoided.</p>
                 </section>
               </div>
 
@@ -132,10 +141,14 @@
 
               <h2 class="h5 zw-section-title">Beginner checklist</h2>
               <div class="d-grid gap-2 mt-3">
-                <div class="d-flex gap-2"><i class="bi bi-check2-circle text-success"></i><span>Pick one swap this week</span></div>
-                <div class="d-flex gap-2"><i class="bi bi-check2-circle text-success"></i><span>Find one refill station near you</span></div>
-                <div class="d-flex gap-2"><i class="bi bi-check2-circle text-success"></i><span>Choose a reusable container to start</span></div>
-                <div class="d-flex gap-2"><i class="bi bi-check2-circle text-success"></i><span>Repeat for 4 weeks</span></div>
+                <div class="d-flex gap-2"><i class="bi bi-check2-circle text-success"></i><span>Pick one swap this
+                    week</span></div>
+                <div class="d-flex gap-2"><i class="bi bi-check2-circle text-success"></i><span>Find one refill station
+                    near you</span></div>
+                <div class="d-flex gap-2"><i class="bi bi-check2-circle text-success"></i><span>Choose a reusable
+                    container to start</span></div>
+                <div class="d-flex gap-2"><i class="bi bi-check2-circle text-success"></i><span>Repeat for 4
+                    weeks</span></div>
               </div>
 
               <div class="zw-card p-4 mt-4">
@@ -236,4 +249,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/main.js"></script>
 </body>
+
 </html>
