--- a/dashboard.html
+++ b/dashboard.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="ZeroWaste Store admin dashboard for orders, users, refill requests, and messages." />
   <title>ZeroWaste Store - Admin Dashboard</title>
-  <link rel="icon" href="assets/images/favicon.png" />
+  <link rel="icon" href="assets/images/favicon.svg" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet" />
   <link href="assets/css/style.css" rel="stylesheet" />
