--- a/home-2.html
+++ b/home-2.html
@@ -1,15 +1,17 @@
 <!doctype html>
 <html lang="en" dir="ltr" data-bs-theme="light">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Find refill stations near you for liquids, grains, and cleaning products." />
   <title>ZeroWaste Store - Refill Station Locator</title>
-  <link rel="icon" href="assets/images/favicon.png" />
+  <link rel="icon" href="assets/images/favicon.svg" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet" />
   <link href="assets/css/style.css" rel="stylesheet" />
 </head>
+
 <body>
   <header class="zw-navbar sticky-top">
     <nav class="navbar navbar-expand-lg">
@@ -20,7 +22,8 @@
         </a>
 
         <div class="d-flex align-items-center gap-2 order-lg-2">
-          <button type="button" class="btn btn-sm btn-outline-secondary" data-dir-toggle aria-label="Toggle direction" data-dir-btn>LTR</button>
+          <button type="button" class="btn btn-sm btn-outline-secondary" data-dir-toggle aria-label="Toggle direction"
+            data-dir-btn>LTR</button>
           <button type="button" class="btn btn-sm btn-outline-secondary" data-theme-toggle aria-label="Toggle theme">
             <i class="bi bi-sun" data-theme-icon></i>
           </button>
@@ -28,7 +31,8 @@
           <a class="btn btn-sm btn-outline-success zw-btn-outline d-none d-lg-inline-flex" href="login.html">Login</a>
           <a class="btn btn-sm btn-success zw-btn d-none d-lg-inline-flex" href="register.html">Signup</a>
 
-          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNav" aria-controls="offcanvasNav" aria-label="Open menu">
+          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNav"
+            aria-controls="offcanvasNav" aria-label="Open menu">
             <span class="navbar-toggler-icon"></span>
           </button>
         </div>
@@ -36,7 +40,7 @@
         <div class="collapse navbar-collapse order-lg-1" id="navbarNav">
           <ul class="navbar-nav mx-lg-auto gap-lg-1">
             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-            <li class="nav-item"><a class="nav-link active" href="home-2.html">Refill Locator</a></li>
+            <li class="nav-item"><a class="nav-link active" href="home-2.html">Refill</a></li>
             <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
             <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
             <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
@@ -56,11 +60,12 @@
         <div class="d-grid gap-2 mb-3">
           <a class="btn btn-outline-success zw-btn-outline" href="login.html">Login</a>
           <a class="btn btn-success zw-btn" href="register.html">Signup</a>
-          <a class="btn btn-outline-secondary" href="dashboard.html"><i class="bi bi-speedometer2 me-1"></i> Admin Dashboard</a>
+          <a class="btn btn-outline-secondary" href="dashboard.html"><i class="bi bi-speedometer2 me-1"></i> Admin
+            Dashboard</a>
         </div>
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="home-2.html">Refill Locator</a></li>
+          <li class="nav-item"><a class="nav-link" href="home-2.html">Refill</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
           <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
           <li class="nav-item"><a class="nav-link" href="service-details.html">Service Details</a></li>
@@ -79,10 +84,12 @@
         <div class="row g-4 align-items-center">
           <div class="col-lg-7">
             <h1 class="display-6 fw-bold mb-2">Find Refill Stations Near You</h1>
-            <p class="lead text-secondary mb-4">Locate refill points for liquids, grains, and cleaning products. Filter by category and save your favorites.</p>
+            <p class="lead text-secondary mb-4">Locate refill points for liquids, grains, and cleaning products. Filter
+              by category and save your favorites.</p>
             <div class="row g-2">
               <div class="col-md-7">
-                <input class="form-control form-control-lg" placeholder="Search location (e.g., Downtown, Riverside)" data-search-input />
+                <input class="form-control form-control-lg" placeholder="Search location (e.g., Downtown, Riverside)"
+                  data-search-input />
               </div>
               <div class="col-md-5">
                 <select class="form-select form-select-lg" data-filter-select>
@@ -94,17 +101,16 @@
               </div>
             </div>
             <div class="d-flex flex-column flex-sm-row gap-2 mt-3">
-              <a class="btn btn-success zw-btn" href="service-details.html"><i class="bi bi-question-circle me-2"></i>Refill FAQs</a>
-              <a class="btn btn-outline-success zw-btn-outline" href="register.html"><i class="bi bi-heart me-2"></i>Save Favorites</a>
+              <a class="btn btn-success zw-btn" href="service-details.html"><i
+                  class="bi bi-question-circle me-2"></i>Refill FAQs</a>
+              <a class="btn btn-outline-success zw-btn-outline" href="register.html"><i
+                  class="bi bi-heart me-2"></i>Save Favorites</a>
             </div>
           </div>
           <div class="col-lg-5">
-            <div class="zw-map-placeholder d-flex align-items-center justify-content-center p-4">
-              <div class="text-center">
-                <div class="zw-icon-circle mx-auto mb-3"><i class="bi bi-geo-alt"></i></div>
-                <h5 class="mb-1">Map Preview</h5>
-                <p class="text-secondary mb-0">Replace with Google Maps/Mapbox later. This layout is ready.</p>
-              </div>
+            <div class="hero-image-wrapper p-2">
+              <img src="assets/images/hero2.png" class="img-fluid rounded-4 shadow-lg" alt="ZeroWaste Refill Stations"
+                style="width: 100%; object-fit: cover;">
             </div>
           </div>
         </div>
@@ -122,7 +128,8 @@
         </div>
 
         <div class="row g-3">
-          <div class="col-md-6" data-filter-card data-tag="liquids" data-haystack="Green Bottle Refill Downtown liquids shampoo soap">
+          <div class="col-md-6" data-filter-card data-tag="liquids"
+            data-haystack="Green Bottle Refill Downtown liquids shampoo soap">
             <div class="zw-card p-4 h-100">
               <div class="d-flex justify-content-between gap-3 align-items-start">
                 <div>
@@ -143,7 +150,8 @@
             </div>
           </div>
 
-          <div class="col-md-6" data-filter-card data-tag="grains" data-haystack="Bulk Pantry Hub Riverside grains rice oats lentils">
+          <div class="col-md-6" data-filter-card data-tag="grains"
+            data-haystack="Bulk Pantry Hub Riverside grains rice oats lentils">
             <div class="zw-card p-4 h-100">
               <div class="d-flex justify-content-between gap-3 align-items-start">
                 <div>
@@ -164,7 +172,8 @@
             </div>
           </div>
 
-          <div class="col-md-6" data-filter-card data-tag="cleaning" data-haystack="Earth Clean Corner Midtown cleaning laundry floor cleaner">
+          <div class="col-md-6" data-filter-card data-tag="cleaning"
+            data-haystack="Earth Clean Corner Midtown cleaning laundry floor cleaner">
             <div class="zw-card p-4 h-100">
               <div class="d-flex justify-content-between gap-3 align-items-start">
                 <div>
@@ -185,7 +194,8 @@
             </div>
           </div>
 
-          <div class="col-md-6" data-filter-card data-tag="liquids" data-haystack="Refill & Reuse Market Uptown liquids oils vinegar sanitizer">
+          <div class="col-md-6" data-filter-card data-tag="liquids"
+            data-haystack="Refill & Reuse Market Uptown liquids oils vinegar sanitizer">
             <div class="zw-card p-4 h-100">
               <div class="d-flex justify-content-between gap-3 align-items-start">
                 <div>
@@ -248,7 +258,8 @@
           <div class="col-lg-6">
             <div class="zw-card p-4 h-100">
               <h2 class="h4 zw-section-title">Subscription Refill Services</h2>
-              <p class="text-secondary mt-2">Get monthly refills with pickup/delivery loops—ideal for busy households.</p>
+              <p class="text-secondary mt-2">Get monthly refills with pickup/delivery loops—ideal for busy households.
+              </p>
               <div class="d-grid gap-3">
                 <div class="zw-card p-3">
                   <div class="d-flex justify-content-between align-items-center">
@@ -349,4 +360,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/main.js"></script>
 </body>
+
 </html>
