--- a/pricing.html
+++ b/pricing.html
@@ -1,15 +1,18 @@
 <!doctype html>
 <html lang="en" dir="ltr" data-bs-theme="light">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="ZeroWaste Store pricing: memberships, delivery pricing, and subscription discounts." />
+  <meta name="description"
+    content="ZeroWaste Store pricing: memberships, delivery pricing, and subscription discounts." />
   <title>ZeroWaste Store - Pricing</title>
-  <link rel="icon" href="assets/images/favicon.png" />
+  <link rel="icon" href="assets/images/favicon.svg" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet" />
   <link href="assets/css/style.css" rel="stylesheet" />
 </head>
+
 <body>
   <header class="zw-navbar sticky-top">
     <nav class="navbar navbar-expand-lg">
@@ -20,7 +23,8 @@
         </a>
 
         <div class="d-flex align-items-center gap-2 order-lg-2">
-          <button type="button" class="btn btn-sm btn-outline-secondary" data-dir-toggle aria-label="Toggle direction" data-dir-btn>LTR</button>
+          <button type="button" class="btn btn-sm btn-outline-secondary" data-dir-toggle aria-label="Toggle direction"
+            data-dir-btn>LTR</button>
           <button type="button" class="btn btn-sm btn-outline-secondary" data-theme-toggle aria-label="Toggle theme">
             <i class="bi bi-sun" data-theme-icon></i>
           </button>
@@ -28,7 +32,8 @@
           <a class="btn btn-sm btn-outline-success zw-btn-outline d-none d-lg-inline-flex" href="login.html">Login</a>
           <a class="btn btn-sm btn-success zw-btn d-none d-lg-inline-flex" href="register.html">Signup</a>
 
-          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNav" aria-controls="offcanvasNav" aria-label="Open menu">
+          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNav"
+            aria-controls="offcanvasNav" aria-label="Open menu">
             <span class="navbar-toggler-icon"></span>
           </button>
         </div>
@@ -36,7 +41,7 @@
         <div class="collapse navbar-collapse order-lg-1" id="navbarNav">
           <ul class="navbar-nav mx-lg-auto gap-lg-1">
             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="home-2.html">Refill Locator</a></li>
+            <li class="nav-item"><a class="nav-link" href="home-2.html">Refill</a></li>
             <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
             <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
             <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
@@ -56,11 +61,12 @@
         <div class="d-grid gap-2 mb-3">
           <a class="btn btn-outline-success zw-btn-outline" href="login.html">Login</a>
           <a class="btn btn-success zw-btn" href="register.html">Signup</a>
-          <a class="btn btn-outline-secondary" href="dashboard.html"><i class="bi bi-speedometer2 me-1"></i> Admin Dashboard</a>
+          <a class="btn btn-outline-secondary" href="dashboard.html"><i class="bi bi-speedometer2 me-1"></i> Admin
+            Dashboard</a>
         </div>
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="home-2.html">Refill Locator</a></li>
+          <li class="nav-item"><a class="nav-link" href="home-2.html">Refill</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
           <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
           <li class="nav-item"><a class="nav-link" href="service-details.html">Service Details</a></li>
@@ -79,10 +85,12 @@
         <div class="row g-4 align-items-center">
           <div class="col-lg-8">
             <h1 class="display-6 fw-bold mb-2">Pricing & Memberships</h1>
-            <p class="lead text-secondary mb-0">Choose a plan for refills and low-waste delivery. No tables—just easy-to-read cards.</p>
+            <p class="lead text-secondary mb-0">Choose a plan for refills and low-waste delivery. No tables—just
+              easy-to-read cards.</p>
           </div>
           <div class="col-lg-4 text-lg-end">
-            <a class="btn btn-outline-secondary" href="service-details.html"><i class="bi bi-question-circle me-2"></i>FAQs</a>
+            <a class="btn btn-outline-secondary" href="service-details.html"><i
+                class="bi bi-question-circle me-2"></i>FAQs</a>
           </div>
         </div>
       </div>
@@ -101,9 +109,12 @@
                 <span class="text-secondary">/month</span>
               </div>
               <div class="d-grid gap-2">
-                <div class="d-flex gap-2"><i class="bi bi-check2-circle text-success"></i><span>2 refill bookings</span></div>
-                <div class="d-flex gap-2"><i class="bi bi-check2-circle text-success"></i><span>Standard delivery rates</span></div>
-                <div class="d-flex gap-2"><i class="bi bi-check2-circle text-success"></i><span>Save favorites</span></div>
+                <div class="d-flex gap-2"><i class="bi bi-check2-circle text-success"></i><span>2 refill bookings</span>
+                </div>
+                <div class="d-flex gap-2"><i class="bi bi-check2-circle text-success"></i><span>Standard delivery
+                    rates</span></div>
+                <div class="d-flex gap-2"><i class="bi bi-check2-circle text-success"></i><span>Save favorites</span>
+                </div>
               </div>
               <div class="mt-4">
                 <a class="btn btn-success zw-btn w-100" href="register.html">Choose Basic</a>
@@ -123,9 +134,12 @@
                 <span class="text-secondary">/month</span>
               </div>
               <div class="d-grid gap-2">
-                <div class="d-flex gap-2"><i class="bi bi-check2-circle text-success"></i><span>5 refill bookings</span></div>
-                <div class="d-flex gap-2"><i class="bi bi-check2-circle text-success"></i><span>Discounted delivery</span></div>
-                <div class="d-flex gap-2"><i class="bi bi-check2-circle text-success"></i><span>Subscription refills</span></div>
+                <div class="d-flex gap-2"><i class="bi bi-check2-circle text-success"></i><span>5 refill bookings</span>
+                </div>
+                <div class="d-flex gap-2"><i class="bi bi-check2-circle text-success"></i><span>Discounted
+                    delivery</span></div>
+                <div class="d-flex gap-2"><i class="bi bi-check2-circle text-success"></i><span>Subscription
+                    refills</span></div>
               </div>
               <div class="mt-4">
                 <a class="btn btn-success zw-btn w-100" href="register.html">Choose Plus</a>
@@ -142,9 +156,12 @@
                 <span class="text-secondary">/month</span>
               </div>
               <div class="d-grid gap-2">
-                <div class="d-flex gap-2"><i class="bi bi-check2-circle text-success"></i><span>10 refill bookings</span></div>
-                <div class="d-flex gap-2"><i class="bi bi-check2-circle text-success"></i><span>Lowest delivery fees</span></div>
-                <div class="d-flex gap-2"><i class="bi bi-check2-circle text-success"></i><span>Bulk ordering discounts</span></div>
+                <div class="d-flex gap-2"><i class="bi bi-check2-circle text-success"></i><span>10 refill
+                    bookings</span></div>
+                <div class="d-flex gap-2"><i class="bi bi-check2-circle text-success"></i><span>Lowest delivery
+                    fees</span></div>
+                <div class="d-flex gap-2"><i class="bi bi-check2-circle text-success"></i><span>Bulk ordering
+                    discounts</span></div>
               </div>
               <div class="mt-4">
                 <a class="btn btn-success zw-btn w-100" href="register.html">Choose Family</a>
@@ -283,4 +300,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/main.js"></script>
 </body>
+
 </html>
