--- a/register.html
+++ b/register.html
@@ -1,232 +1,125 @@
 <!doctype html>
 <html lang="en" dir="ltr" data-bs-theme="light">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Create a ZeroWaste Store account to save refill stations and manage eco deliveries." />
+  <meta name="description"
+    content="Create a ZeroWaste Store account to save refill stations and manage eco deliveries." />
   <title>ZeroWaste Store - Register</title>
-  <link rel="icon" href="assets/images/favicon.png" />
+  <link rel="icon" href="assets/images/favicon.svg" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet" />
   <link href="assets/css/style.css" rel="stylesheet" />
 </head>
+
 <body>
-  <header class="zw-navbar sticky-top">
-    <nav class="navbar navbar-expand-lg">
-      <div class="container">
-        <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
-          <span class="zw-icon-circle"><i class="bi bi-recycle"></i></span>
-          <span class="zw-brand">ZeroWaste Store</span>
-        </a>
-
-        <div class="d-flex align-items-center gap-2 order-lg-2">
-          <button type="button" class="btn btn-sm btn-outline-secondary" data-dir-toggle aria-label="Toggle direction" data-dir-btn>LTR</button>
-          <button type="button" class="btn btn-sm btn-outline-secondary" data-theme-toggle aria-label="Toggle theme">
-            <i class="bi bi-sun" data-theme-icon></i>
-          </button>
-
-          <a class="btn btn-sm btn-outline-success zw-btn-outline d-none d-lg-inline-flex" href="login.html">Login</a>
-          <a class="btn btn-sm btn-success zw-btn d-none d-lg-inline-flex" href="register.html">Signup</a>
-
-          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNav" aria-controls="offcanvasNav" aria-label="Open menu">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-        </div>
-
-        <div class="collapse navbar-collapse order-lg-1" id="navbarNav">
-          <ul class="navbar-nav mx-lg-auto gap-lg-1">
-            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="home-2.html">Refill Locator</a></li>
-            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-            <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-            <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-            <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
-            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
-    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNav" aria-labelledby="offcanvasNavLabel">
-      <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasNavLabel">ZeroWaste Store</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-      </div>
-      <div class="offcanvas-body">
-        <div class="d-grid gap-2 mb-3">
-          <a class="btn btn-outline-success zw-btn-outline" href="login.html">Login</a>
-          <a class="btn btn-success zw-btn" href="register.html">Signup</a>
-          <a class="btn btn-outline-secondary" href="dashboard.html"><i class="bi bi-speedometer2 me-1"></i> Admin Dashboard</a>
-        </div>
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="home-2.html">Refill Locator</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-          <li class="nav-item"><a class="nav-link" href="service-details.html">Service Details</a></li>
-          <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-          <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
-          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-          <li class="nav-item"><a class="nav-link" href="coming-soon.html">Coming Soon</a></li>
-        </ul>
-      </div>
-    </div>
-  </header>
-
-  <main>
-    <section class="zw-hero py-5">
-      <div class="container">
-        <div class="row g-4 align-items-center">
-          <div class="col-lg-7">
-            <h1 class="display-6 fw-bold mb-2">Create Your Account</h1>
-            <p class="lead text-secondary mb-0">Save refill stations, manage eco deliveries, and get membership benefits.</p>
+  <div class="min-vh-100 d-flex flex-column justify-content-center py-5">
+    <div class="container">
+      <div class="row g-5 align-items-center">
+        <!-- Left Side: Information -->
+        <div class="col-lg-5">
+          <div class="mb-5">
+            <a class="navbar-brand d-flex align-items-center gap-2 text-decoration-none mb-4" href="index.html">
+              <span class="zw-icon-circle"><i class="bi bi-recycle"></i></span>
+              <span class="zw-brand text-dark">ZeroWaste Store</span>
+            </a>
+            <h1 class="display-5 fw-bold mb-3">Create Your Account</h1>
+            <p class="lead text-secondary mb-0">Save refill stations, manage eco deliveries, and get membership
+              benefits.</p>
           </div>
-          <div class="col-lg-5">
-            <div class="zw-card p-4">
-              <div class="d-flex gap-3">
-                <span class="zw-icon-circle"><i class="bi bi-person-check"></i></span>
-                <div>
-                  <h2 class="h6 mb-1">Quick Setup</h2>
-                  <p class="text-secondary mb-0">Just fill your details. This is a static demo form.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
 
-    <section class="py-5">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-7">
-            <div class="zw-card p-4 p-lg-5">
-              <h2 class="h4 zw-section-title">Signup</h2>
-              <form class="row g-3 mt-2" action="#">
-                <div class="col-md-6">
-                  <label class="form-label" for="first">First Name</label>
-                  <input id="first" class="form-control" placeholder="First name" />
-                </div>
-                <div class="col-md-6">
-                  <label class="form-label" for="last">Last Name</label>
-                  <input id="last" class="form-control" placeholder="Last name" />
-                </div>
-                <div class="col-12">
-                  <label class="form-label" for="regEmail">Email</label>
-                  <input id="regEmail" type="email" class="form-control" placeholder="you@example.com" />
-                </div>
-                <div class="col-md-6">
-                  <label class="form-label" for="regPass">Password</label>
-                  <input id="regPass" type="password" class="form-control" placeholder="Create a password" />
-                </div>
-                <div class="col-md-6">
-                  <label class="form-label" for="regPass2">Confirm Password</label>
-                  <input id="regPass2" type="password" class="form-control" placeholder="Repeat password" />
-                </div>
-                <div class="col-12">
-                  <label class="form-label" for="role">I am registering as</label>
-                  <select id="role" class="form-select">
-                    <option value="customer">Customer</option>
-                    <option value="partner">Refill Partner Store</option>
-                  </select>
-                  <p class="zw-form-hint mt-1 mb-0">Partners can request to be listed on the refill locator.</p>
-                </div>
-                <div class="col-12">
-                  <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="terms">
-                    <label class="form-check-label" for="terms">
-                      I agree to the terms and privacy policy
-                    </label>
+          <div class="row g-4">
+            <div class="col-md-6 col-lg-12">
+              <div class="zw-card p-4">
+                <div class="d-flex gap-3">
+                  <span class="zw-icon-circle"><i class="bi bi-person-check"></i></span>
+                  <div>
+                    <h2 class="h6 mb-1">Quick Setup</h2>
+                    <p class="text-secondary mb-0 small">Just fill your details. This is a static demo form.</p>
                   </div>
                 </div>
-                <div class="col-12">
-                  <button type="button" class="btn btn-success zw-btn btn-lg w-100">Create Account</button>
-                  <div class="text-center text-secondary mt-2">Already have an account? <a class="text-decoration-none" href="login.html">Login</a></div>
-                </div>
-              </form>
+              </div>
             </div>
-
-            <div class="zw-card p-4 mt-3">
-              <div class="d-flex gap-3">
-                <span class="zw-icon-circle"><i class="bi bi-gift"></i></span>
-                <div>
-                  <h3 class="h6 mb-1">Membership reminder</h3>
-                  <p class="text-secondary mb-0">Membership plans are listed on <a class="text-decoration-none" href="pricing.html">Pricing</a>.</p>
+            <div class="col-md-6 col-lg-12">
+              <div class="zw-card p-4">
+                <div class="d-flex gap-3">
+                  <span class="zw-icon-circle"><i class="bi bi-gift"></i></span>
+                  <div>
+                    <h3 class="h6 mb-1">Membership reminder</h3>
+                    <p class="text-secondary mb-0 small">Membership plans are listed on <a class="text-decoration-none"
+                        href="pricing.html">Pricing</a>.</p>
+                  </div>
                 </div>
               </div>
             </div>
-
-          </div>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <footer class="zw-footer pt-5">
-    <div class="container">
-      <div class="row g-4">
-        <div class="col-md-6 col-lg-3">
-          <div class="d-flex align-items-center gap-2 mb-2">
-            <span class="zw-icon-circle"><i class="bi bi-recycle"></i></span>
-            <strong>ZeroWaste Store</strong>
-          </div>
-          <p class="text-secondary">Sustainable shopping made simple: refill culture + low-waste delivery.</p>
-          <div class="zw-social d-flex gap-2">
-            <a href="#" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
-            <a href="#" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
-            <a href="#" aria-label="Twitter"><i class="bi bi-twitter-x"></i></a>
-            <a href="#" aria-label="YouTube"><i class="bi bi-youtube"></i></a>
           </div>
         </div>
 
-        <div class="col-md-6 col-lg-3">
-          <h3 class="h6">Company</h3>
-          <ul class="list-unstyled d-grid gap-2">
-            <li><a class="text-decoration-none" href="about.html">About</a></li>
-            <li><a class="text-decoration-none" href="services.html">Services</a></li>
-            <li><a class="text-decoration-none" href="blog.html">Blog</a></li>
-            <li><a class="text-decoration-none" href="pricing.html">Pricing</a></li>
-          </ul>
-        </div>
+        <!-- Right Side: Signup Form -->
+        <div class="col-lg-7 px-lg-5">
+          <div class="zw-card p-4 p-lg-5">
+            <h2 class="h4 zw-section-title mb-4">Signup</h2>
+            <form class="row g-3" action="#">
+              <div class="col-md-6">
+                <label class="form-label" for="first">First Name</label>
+                <input id="first" class="form-control" placeholder="First name" />
+              </div>
+              <div class="col-md-6">
+                <label class="form-label" for="last">Last Name</label>
+                <input id="last" class="form-control" placeholder="Last name" />
+              </div>
+              <div class="col-12">
+                <label class="form-label" for="regEmail">Email</label>
+                <input id="regEmail" type="email" class="form-control" placeholder="you@example.com" />
+              </div>
+              <div class="col-md-6">
+                <label class="form-label" for="regPass">Password</label>
+                <input id="regPass" type="password" class="form-control" placeholder="Create a password" />
+              </div>
+              <div class="col-md-6">
+                <label class="form-label" for="regPass2">Confirm Password</label>
+                <input id="regPass2" type="password" class="form-control" placeholder="Repeat password" />
+              </div>
+              <div class="col-12">
+                <label class="form-label" for="role">I am registering as</label>
+                <select id="role" class="form-select">
+                  <option value="customer">Customer</option>
+                  <option value="partner">Refill Partner Store</option>
+                </select>
+              </div>
+              <div class="col-12">
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" value="" id="terms">
+                  <label class="form-check-label" for="terms">
+                    I agree to the terms and privacy policy
+                  </label>
+                </div>
+              </div>
+              <div class="col-12 d-grid">
+                <button type="button" class="btn btn-success zw-btn btn-lg">Create Account</button>
+              </div>
 
-        <div class="col-md-6 col-lg-3">
-          <h3 class="h6">Support</h3>
-          <ul class="list-unstyled d-grid gap-2">
-            <li><a class="text-decoration-none" href="contact.html">Contact</a></li>
-            <li><a class="text-decoration-none" href="service-details.html">FAQ</a></li>
-            <li><a class="text-decoration-none" href="coming-soon.html">Privacy</a></li>
-            <li><a class="text-decoration-none" href="coming-soon.html">Terms</a></li>
-          </ul>
-        </div>
+              <div class="col-12">
+                <div class="zw-divider">Or continue with</div>
+                <div class="zw-social-login">
+                  <a href="#" class="zw-btn-social" aria-label="Google"><i class="bi bi-google"></i></a>
+                  <a href="#" class="zw-btn-social" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
+                  <a href="#" class="zw-btn-social" aria-label="Apple"><i class="bi bi-apple"></i></a>
+                </div>
+              </div>
 
-        <div class="col-md-6 col-lg-3">
-          <h3 class="h6">Newsletter</h3>
-          <p class="text-secondary">Get sustainable tips & eco offers.</p>
-          <form class="d-flex gap-2" action="#">
-            <label class="visually-hidden" for="newsEmail11">Email</label>
-            <input id="newsEmail11" class="form-control" type="email" placeholder="you@example.com" />
-            <button class="btn btn-success zw-btn" type="button">Join</button>
-          </form>
-          <p class="zw-form-hint mt-2 mb-0">No spam. Unsubscribe anytime.</p>
-        </div>
-      </div>
-
-      <hr class="my-4" />
-      <div class="d-flex flex-column flex-md-row justify-content-between align-items-center gap-2 pb-4">
-        <small class="text-secondary">© 2026 ZeroWaste Store. All rights reserved.</small>
-        <div class="d-flex gap-3">
-          <a class="text-decoration-none" href="dashboard.html">Admin</a>
-          <a class="text-decoration-none" href="404.html">404</a>
+              <div class="col-12 text-center text-secondary mt-2">Already have an account? <a
+                  class="text-decoration-none" href="login.html">Login</a></div>
+            </form>
+          </div>
         </div>
       </div>
     </div>
-  </footer>
-
-  <button class="btn btn-success zw-btn zw-backtotop" type="button" aria-label="Back to top" data-back-to-top>
-    <i class="bi bi-arrow-up"></i>
-  </button>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/main.js"></script>
 </body>
+
 </html>
