--- a/service-details.html
+++ b/service-details.html
@@ -1,15 +1,18 @@
 <!doctype html>
 <html lang="en" dir="ltr" data-bs-theme="light">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Service details including refill pricing model, delivery charges, membership plans, and FAQs." />
+  <meta name="description"
+    content="Service details including refill pricing model, delivery charges, membership plans, and FAQs." />
   <title>ZeroWaste Store - Service Details</title>
-  <link rel="icon" href="assets/images/favicon.png" />
+  <link rel="icon" href="assets/images/favicon.svg" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet" />
   <link href="assets/css/style.css" rel="stylesheet" />
 </head>
+
 <body>
   <header class="zw-navbar sticky-top">
     <nav class="navbar navbar-expand-lg">
@@ -20,7 +23,8 @@
         </a>
 
         <div class="d-flex align-items-center gap-2 order-lg-2">
-          <button type="button" class="btn btn-sm btn-outline-secondary" data-dir-toggle aria-label="Toggle direction" data-dir-btn>LTR</button>
+          <button type="button" class="btn btn-sm btn-outline-secondary" data-dir-toggle aria-label="Toggle direction"
+            data-dir-btn>LTR</button>
           <button type="button" class="btn btn-sm btn-outline-secondary" data-theme-toggle aria-label="Toggle theme">
             <i class="bi bi-sun" data-theme-icon></i>
           </button>
@@ -28,7 +32,8 @@
           <a class="btn btn-sm btn-outline-success zw-btn-outline d-none d-lg-inline-flex" href="login.html">Login</a>
           <a class="btn btn-sm btn-success zw-btn d-none d-lg-inline-flex" href="register.html">Signup</a>
 
-          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNav" aria-controls="offcanvasNav" aria-label="Open menu">
+          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNav"
+            aria-controls="offcanvasNav" aria-label="Open menu">
             <span class="navbar-toggler-icon"></span>
           </button>
         </div>
@@ -36,7 +41,7 @@
         <div class="collapse navbar-collapse order-lg-1" id="navbarNav">
           <ul class="navbar-nav mx-lg-auto gap-lg-1">
             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="home-2.html">Refill Locator</a></li>
+            <li class="nav-item"><a class="nav-link" href="home-2.html">Refill</a></li>
             <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
             <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
             <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
@@ -56,11 +61,12 @@
         <div class="d-grid gap-2 mb-3">
           <a class="btn btn-outline-success zw-btn-outline" href="login.html">Login</a>
           <a class="btn btn-success zw-btn" href="register.html">Signup</a>
-          <a class="btn btn-outline-secondary" href="dashboard.html"><i class="bi bi-speedometer2 me-1"></i> Admin Dashboard</a>
+          <a class="btn btn-outline-secondary" href="dashboard.html"><i class="bi bi-speedometer2 me-1"></i> Admin
+            Dashboard</a>
         </div>
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="home-2.html">Refill Locator</a></li>
+          <li class="nav-item"><a class="nav-link" href="home-2.html">Refill</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
           <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
           <li class="nav-item"><a class="nav-link" href="service-details.html">Service Details</a></li>
@@ -79,7 +85,8 @@
         <div class="row g-4 align-items-center">
           <div class="col-lg-8">
             <h1 class="display-6 fw-bold mb-2">Service Details (FAQ + Pricing)</h1>
-            <p class="lead text-secondary mb-0">Simple explanations for refill pricing, delivery charges, and membership plans.</p>
+            <p class="lead text-secondary mb-0">Simple explanations for refill pricing, delivery charges, and membership
+              plans.</p>
           </div>
           <div class="col-lg-4 text-lg-end">
             <a class="btn btn-success zw-btn btn-lg" href="pricing.html"><i class="bi bi-tags me-2"></i>Pricing Page</a>
@@ -94,7 +101,8 @@
           <div class="col-lg-6">
             <div class="zw-card p-4 h-100">
               <h2 class="h4 zw-section-title">Refill Pricing Model</h2>
-              <p class="text-secondary">Refill pricing is usually based on the product weight/volume you refill. Bring your own container and pay only for the refill.</p>
+              <p class="text-secondary">Refill pricing is usually based on the product weight/volume you refill. Bring
+                your own container and pay only for the refill.</p>
 
               <div class="d-grid gap-3">
                 <div class="zw-card p-3">
@@ -129,7 +137,8 @@
           <div class="col-lg-6">
             <div class="zw-card p-4 h-100">
               <h2 class="h4 zw-section-title">Delivery Charges (Eco Delivery)</h2>
-              <p class="text-secondary">Delivery is priced by distance and packaging type. We encourage reusable crate loops for regular customers.</p>
+              <p class="text-secondary">Delivery is priced by distance and packaging type. We encourage reusable crate
+                loops for regular customers.</p>
 
               <div class="d-grid gap-3">
                 <div class="zw-card p-3">
@@ -193,7 +202,8 @@
               <div class="accordion mt-3" id="faq">
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="q1">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#a1" aria-expanded="true" aria-controls="a1">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#a1"
+                      aria-expanded="true" aria-controls="a1">
                       Do I need special containers for refills?
                     </button>
                   </h2>
@@ -206,7 +216,8 @@
 
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="q2">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#a2" aria-expanded="false" aria-controls="a2">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                      data-bs-target="#a2" aria-expanded="false" aria-controls="a2">
                       How do you keep delivery low-waste?
                     </button>
                   </h2>
@@ -219,20 +230,23 @@
 
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="q3">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#a3" aria-expanded="false" aria-controls="a3">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                      data-bs-target="#a3" aria-expanded="false" aria-controls="a3">
                       Can I book refills online?
                     </button>
                   </h2>
                   <div id="a3" class="accordion-collapse collapse" aria-labelledby="q3" data-bs-parent="#faq">
                     <div class="accordion-body">
-                      Yes, use our locator to find a partner and then book through contact or membership tools (demo UI).
+                      Yes, use our locator to find a partner and then book through contact or membership tools (demo
+                      UI).
                     </div>
                   </div>
                 </div>
 
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="q4">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#a4" aria-expanded="false" aria-controls="a4">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                      data-bs-target="#a4" aria-expanded="false" aria-controls="a4">
                       Do you support businesses and offices?
                     </button>
                   </h2>
@@ -321,4 +335,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/main.js"></script>
 </body>
+
 </html>
