--- a/services.html
+++ b/services.html
@@ -1,15 +1,18 @@
 <!doctype html>
 <html lang="en" dir="ltr" data-bs-theme="light">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="ZeroWaste Store services: refill station locator, eco product delivery, subscriptions, and bulk ordering." />
+  <meta name="description"
+    content="ZeroWaste Store services: refill station locator, eco product delivery, subscriptions, and bulk ordering." />
   <title>ZeroWaste Store - Services</title>
-  <link rel="icon" href="assets/images/favicon.png" />
+  <link rel="icon" href="assets/images/favicon.svg" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet" />
   <link href="assets/css/style.css" rel="stylesheet" />
 </head>
+
 <body>
   <header class="zw-navbar sticky-top">
     <nav class="navbar navbar-expand-lg">
@@ -20,7 +23,8 @@
         </a>
 
         <div class="d-flex align-items-center gap-2 order-lg-2">
-          <button type="button" class="btn btn-sm btn-outline-secondary" data-dir-toggle aria-label="Toggle direction" data-dir-btn>LTR</button>
+          <button type="button" class="btn btn-sm btn-outline-secondary" data-dir-toggle aria-label="Toggle direction"
+            data-dir-btn>LTR</button>
           <button type="button" class="btn btn-sm btn-outline-secondary" data-theme-toggle aria-label="Toggle theme">
             <i class="bi bi-sun" data-theme-icon></i>
           </button>
@@ -28,7 +32,8 @@
           <a class="btn btn-sm btn-outline-success zw-btn-outline d-none d-lg-inline-flex" href="login.html">Login</a>
           <a class="btn btn-sm btn-success zw-btn d-none d-lg-inline-flex" href="register.html">Signup</a>
 
-          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNav" aria-controls="offcanvasNav" aria-label="Open menu">
+          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNav"
+            aria-controls="offcanvasNav" aria-label="Open menu">
             <span class="navbar-toggler-icon"></span>
           </button>
         </div>
@@ -36,7 +41,7 @@
         <div class="collapse navbar-collapse order-lg-1" id="navbarNav">
           <ul class="navbar-nav mx-lg-auto gap-lg-1">
             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="home-2.html">Refill Locator</a></li>
+            <li class="nav-item"><a class="nav-link" href="home-2.html">Refill</a></li>
             <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
             <li class="nav-item"><a class="nav-link active" href="services.html">Services</a></li>
             <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
@@ -56,11 +61,12 @@
         <div class="d-grid gap-2 mb-3">
           <a class="btn btn-outline-success zw-btn-outline" href="login.html">Login</a>
           <a class="btn btn-success zw-btn" href="register.html">Signup</a>
-          <a class="btn btn-outline-secondary" href="dashboard.html"><i class="bi bi-speedometer2 me-1"></i> Admin Dashboard</a>
+          <a class="btn btn-outline-secondary" href="dashboard.html"><i class="bi bi-speedometer2 me-1"></i> Admin
+            Dashboard</a>
         </div>
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="home-2.html">Refill Locator</a></li>
+          <li class="nav-item"><a class="nav-link" href="home-2.html">Refill</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
           <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
           <li class="nav-item"><a class="nav-link" href="service-details.html">Service Details</a></li>
@@ -79,25 +85,33 @@
         <div class="row g-4 align-items-center">
           <div class="col-lg-8">
             <h1 class="display-6 fw-bold mb-2">Services for a Low-Waste Lifestyle</h1>
-            <p class="lead text-secondary mb-0">Find refill points, order eco essentials, subscribe for regular refills, or place bulk orders for families and businesses.</p>
+            <p class="lead text-secondary mb-0">Find refill points, order eco essentials, subscribe for regular refills,
+              or place bulk orders for families and businesses.</p>
           </div>
           <div class="col-lg-4 text-lg-end">
-            <a class="btn btn-success zw-btn btn-lg" href="service-details.html"><i class="bi bi-file-earmark-text me-2"></i>Service Details</a>
+            <a class="btn btn-success zw-btn btn-lg" href="service-details.html"><i
+                class="bi bi-file-earmark-text me-2"></i>Service Details</a>
           </div>
         </div>
       </div>
     </section>
 
     <section class="py-5">
+      <div class="container text-center mb-5">
+        <h2 class="display-6 fw-bold zw-section-title">Our Core Services</h2>
+        <p class="lead text-secondary mx-auto" style="max-width: 700px;">Everything you need to maintain a zero-waste
+          lifestyle, from local refills to eco-friendly home delivery.</p>
+      </div>
       <div class="container">
-        <div class="row g-3">
-          <div class="col-md-6 col-lg-3">
+        <div class="row g-4 justify-content-center">
+          <div class="col-lg-6">
             <div class="zw-card p-4 h-100">
               <div class="d-flex align-items-center gap-2 mb-2">
                 <span class="zw-icon-circle"><i class="bi bi-geo-alt"></i></span>
                 <h2 class="h6 mb-0">Refill Station Locator</h2>
               </div>
-              <p class="text-secondary">Search refill points by category: liquids, grains, cleaning.</p>
+              <p class="text-secondary">Search refill points by category: liquids, grains, cleaning products, and more
+                in your local area.</p>
               <div class="d-flex flex-wrap gap-2">
                 <a class="btn btn-sm btn-success zw-btn" href="home-2.html">Open Locator</a>
                 <a class="btn btn-sm btn-outline-success zw-btn-outline" href="service-details.html">FAQs</a>
@@ -105,13 +119,14 @@
             </div>
           </div>
 
-          <div class="col-md-6 col-lg-3">
+          <div class="col-lg-6">
             <div class="zw-card p-4 h-100">
               <div class="d-flex align-items-center gap-2 mb-2">
                 <span class="zw-icon-circle"><i class="bi bi-truck"></i></span>
                 <h2 class="h6 mb-0">Eco Product Delivery</h2>
               </div>
-              <p class="text-secondary">Order eco products with minimal packaging and reusable delivery loops.</p>
+              <p class="text-secondary">Order eco products with minimal packaging and reusable delivery loops. We pick
+                up empty containers.</p>
               <div class="d-flex flex-wrap gap-2">
                 <a class="btn btn-sm btn-success zw-btn" href="pricing.html">Delivery Pricing</a>
                 <a class="btn btn-sm btn-outline-success zw-btn-outline" href="contact.html">Ask Support</a>
@@ -119,13 +134,14 @@
             </div>
           </div>
 
-          <div class="col-md-6 col-lg-3">
+          <div class="col-lg-6">
             <div class="zw-card p-4 h-100">
               <div class="d-flex align-items-center gap-2 mb-2">
                 <span class="zw-icon-circle"><i class="bi bi-calendar2-check"></i></span>
                 <h2 class="h6 mb-0">Subscription Refills</h2>
               </div>
-              <p class="text-secondary">Monthly refills for frequent items like detergent, dish soap, grains.</p>
+              <p class="text-secondary">Monthly refills for frequent items like detergent, dish soap, and grains
+                delivered to your doorstep.</p>
               <div class="d-flex flex-wrap gap-2">
                 <a class="btn btn-sm btn-success zw-btn" href="pricing.html">Membership Plans</a>
                 <a class="btn btn-sm btn-outline-success zw-btn-outline" href="register.html">Start</a>
@@ -133,13 +149,14 @@
             </div>
           </div>
 
-          <div class="col-md-6 col-lg-3">
+          <div class="col-lg-6">
             <div class="zw-card p-4 h-100">
               <div class="d-flex align-items-center gap-2 mb-2">
                 <span class="zw-icon-circle"><i class="bi bi-box2-heart"></i></span>
                 <h2 class="h6 mb-0">Bulk Ordering</h2>
               </div>
-              <p class="text-secondary">Family packs and partner orders for offices, cafes, and refill stores.</p>
+              <p class="text-secondary">Family packs and partner orders for offices, cafes, and refill stores looking to
+                reduce waste.</p>
               <div class="d-flex flex-wrap gap-2">
                 <a class="btn btn-sm btn-success zw-btn" href="contact.html">Request Quote</a>
                 <a class="btn btn-sm btn-outline-secondary" href="coming-soon.html">Bulk Catalog</a>
@@ -234,4 +251,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/main.js"></script>
 </body>
+
 </html>
