--- a/dashboard.html
+++ b/dashboard.html
@@ -1,15 +1,18 @@
 <!doctype html>
 <html lang="en" dir="ltr" data-bs-theme="light">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="ZeroWaste Store admin dashboard for orders, users, refill requests, and messages." />
+  <meta name="description"
+    content="ZeroWaste Store admin dashboard for orders, users, refill requests, and messages." />
   <title>ZeroWaste Store - Admin Dashboard</title>
   <link rel="icon" href="assets/images/favicon.svg" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet" />
   <link href="assets/css/style.css" rel="stylesheet" />
 </head>
+
 <body>
   <header class="zw-navbar sticky-top">
     <nav class="navbar navbar-expand-lg">
@@ -21,13 +24,17 @@
         </a>
 
         <div class="d-flex align-items-center gap-2">
-          <button type="button" class="btn btn-sm btn-outline-secondary" data-dir-toggle aria-label="Toggle direction" data-dir-btn>LTR</button>
-          <button type="button" class="btn btn-sm btn-outline-secondary" data-theme-toggle aria-label="Toggle theme">
+          <button type="button" class="btn btn-sm btn-outline-secondary d-none d-lg-inline-flex" data-dir-toggle
+            aria-label="Toggle direction" data-dir-btn>LTR</button>
+          <button type="button" class="btn btn-sm btn-outline-secondary d-none d-lg-inline-flex" data-theme-toggle
+            aria-label="Toggle theme">
             <i class="bi bi-sun" data-theme-icon></i>
           </button>
 
-          <a class="btn btn-sm btn-outline-success zw-btn-outline d-none d-md-inline-flex" href="index.html"><i class="bi bi-house me-1"></i>Website</a>
-          <button class="btn btn-sm btn-success zw-btn d-lg-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#dashMenu" aria-controls="dashMenu">
+          <a class="btn btn-sm btn-outline-success zw-btn-outline d-none d-md-inline-flex" href="index.html"><i
+              class="bi bi-house me-1"></i>Website</a>
+          <button class="btn btn-sm btn-success zw-btn d-lg-none" type="button" data-bs-toggle="offcanvas"
+            data-bs-target="#dashMenu" aria-controls="dashMenu">
             <i class="bi bi-list"></i>
           </button>
         </div>
@@ -46,10 +53,12 @@
             </div>
 
             <nav class="nav nav-pills flex-column gap-1">
-              <a class="nav-link" href="#analytics" data-dash-link="analytics"><i class="bi bi-graph-up me-2"></i>Analytics</a>
+              <a class="nav-link" href="#analytics" data-dash-link="analytics"><i
+                  class="bi bi-graph-up me-2"></i>Analytics</a>
               <a class="nav-link" href="#users" data-dash-link="users"><i class="bi bi-people me-2"></i>Users</a>
               <a class="nav-link" href="#orders" data-dash-link="orders"><i class="bi bi-bag-check me-2"></i>Orders</a>
-              <a class="nav-link" href="#messages" data-dash-link="messages"><i class="bi bi-chat-dots me-2"></i>Messages</a>
+              <a class="nav-link" href="#messages" data-dash-link="messages"><i
+                  class="bi bi-chat-dots me-2"></i>Messages</a>
               <hr class="my-2" />
               <a class="nav-link" href="index.html"><i class="bi bi-arrow-left me-2"></i>Back to Website</a>
               <a class="nav-link" href="login.html"><i class="bi bi-box-arrow-right me-2"></i>Logout</a>
@@ -61,30 +70,47 @@
               <h5 class="offcanvas-title" id="dashMenuLabel">Admin Menu</h5>
               <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
-            <div class="offcanvas-body">
-              <nav class="nav nav-pills flex-column gap-1">
-                <a class="nav-link" href="#analytics" data-dash-link="analytics" data-bs-dismiss="offcanvas"><i class="bi bi-graph-up me-2"></i>Analytics</a>
-                <a class="nav-link" href="#users" data-dash-link="users" data-bs-dismiss="offcanvas"><i class="bi bi-people me-2"></i>Users</a>
-                <a class="nav-link" href="#orders" data-dash-link="orders" data-bs-dismiss="offcanvas"><i class="bi bi-bag-check me-2"></i>Orders</a>
-                <a class="nav-link" href="#messages" data-dash-link="messages" data-bs-dismiss="offcanvas"><i class="bi bi-chat-dots me-2"></i>Messages</a>
+            <div class="offcanvas-body d-flex flex-column">
+              <nav class="nav nav-pills flex-column gap-1 flex-grow-1">
+                <a class="nav-link" href="#analytics" data-dash-link="analytics" data-bs-dismiss="offcanvas"><i
+                    class="bi bi-graph-up me-2"></i>Analytics</a>
+                <a class="nav-link" href="#users" data-dash-link="users" data-bs-dismiss="offcanvas"><i
+                    class="bi bi-people me-2"></i>Users</a>
+                <a class="nav-link" href="#orders" data-dash-link="orders" data-bs-dismiss="offcanvas"><i
+                    class="bi bi-bag-check me-2"></i>Orders</a>
+                <a class="nav-link" href="#messages" data-dash-link="messages" data-bs-dismiss="offcanvas"><i
+                    class="bi bi-chat-dots me-2"></i>Messages</a>
                 <hr class="my-2" />
                 <a class="nav-link" href="index.html"><i class="bi bi-house me-2"></i>Website</a>
                 <a class="nav-link" href="login.html"><i class="bi bi-box-arrow-right me-2"></i>Logout</a>
               </nav>
+
+              <div class="mt-auto pt-3 border-top d-lg-none">
+                <div class="d-flex gap-2">
+                  <button type="button" class="btn btn-outline-secondary w-50" data-dir-toggle
+                    aria-label="Toggle direction" data-dir-btn>LTR</button>
+                  <button type="button" class="btn btn-outline-secondary w-50" data-theme-toggle
+                    aria-label="Toggle theme">
+                    <i class="bi bi-sun" data-theme-icon></i>
+                  </button>
+                </div>
+              </div>
             </div>
           </div>
         </div>
 
         <div class="col-lg-9">
           <div class="zw-card p-4">
-            <div class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center gap-3">
+            <div
+              class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center gap-3">
               <div>
                 <h1 class="h3 zw-section-title mb-1">Admin Overview</h1>
                 <p class="text-secondary mb-0">Track orders, users, refill requests, and support messages.</p>
               </div>
               <div class="w-100 w-md-auto" style="max-width:360px;">
                 <label class="form-label" for="dashSearch">Quick Search (demo)</label>
-                <input id="dashSearch" class="form-control" placeholder="Search orders, users, messages" data-dash-search />
+                <input id="dashSearch" class="form-control" placeholder="Search orders, users, messages"
+                  data-dash-search />
               </div>
             </div>
           </div>
@@ -173,7 +199,8 @@
                 <h2 class="h4 zw-section-title mb-1">Users</h2>
                 <p class="text-secondary mb-0">Customers and partner refill stations (cards).</p>
               </div>
-              <a class="btn btn-success zw-btn" href="register.html"><i class="bi bi-person-plus me-2"></i>Add User (Demo)</a>
+              <a class="btn btn-success zw-btn" href="register.html"><i class="bi bi-person-plus me-2"></i>Add User
+                (Demo)</a>
             </div>
 
             <div class="row g-3">
@@ -187,8 +214,10 @@
                     <span class="badge rounded-pill zw-badge-secondary">Active</span>
                   </div>
                   <div class="d-grid gap-2">
-                    <div class="d-flex justify-content-between"><span class="text-secondary">Saved stations</span><strong>4</strong></div>
-                    <div class="d-flex justify-content-between"><span class="text-secondary">Orders</span><strong>12</strong></div>
+                    <div class="d-flex justify-content-between"><span class="text-secondary">Saved
+                        stations</span><strong>4</strong></div>
+                    <div class="d-flex justify-content-between"><span
+                        class="text-secondary">Orders</span><strong>12</strong></div>
                   </div>
                 </div>
               </div>
@@ -203,8 +232,10 @@
                     <span class="badge rounded-pill zw-badge-secondary">Active</span>
                   </div>
                   <div class="d-grid gap-2">
-                    <div class="d-flex justify-content-between"><span class="text-secondary">Saved stations</span><strong>2</strong></div>
-                    <div class="d-flex justify-content-between"><span class="text-secondary">Orders</span><strong>19</strong></div>
+                    <div class="d-flex justify-content-between"><span class="text-secondary">Saved
+                        stations</span><strong>2</strong></div>
+                    <div class="d-flex justify-content-between"><span
+                        class="text-secondary">Orders</span><strong>19</strong></div>
                   </div>
                 </div>
               </div>
@@ -219,8 +250,10 @@
                     <span class="badge rounded-pill zw-badge-secondary">Verified</span>
                   </div>
                   <div class="d-grid gap-2">
-                    <div class="d-flex justify-content-between"><span class="text-secondary">Bookings</span><strong>31</strong></div>
-                    <div class="d-flex justify-content-between"><span class="text-secondary">Rating</span><strong>4.8</strong></div>
+                    <div class="d-flex justify-content-between"><span
+                        class="text-secondary">Bookings</span><strong>31</strong></div>
+                    <div class="d-flex justify-content-between"><span
+                        class="text-secondary">Rating</span><strong>4.8</strong></div>
                   </div>
                 </div>
               </div>
@@ -235,8 +268,10 @@
                     <span class="badge rounded-pill zw-badge-secondary">Verified</span>
                   </div>
                   <div class="d-grid gap-2">
-                    <div class="d-flex justify-content-between"><span class="text-secondary">Bookings</span><strong>18</strong></div>
-                    <div class="d-flex justify-content-between"><span class="text-secondary">Rating</span><strong>4.6</strong></div>
+                    <div class="d-flex justify-content-between"><span
+                        class="text-secondary">Bookings</span><strong>18</strong></div>
+                    <div class="d-flex justify-content-between"><span
+                        class="text-secondary">Rating</span><strong>4.6</strong></div>
                   </div>
                 </div>
               </div>
@@ -313,7 +348,8 @@
                 <h2 class="h4 zw-section-title mb-1">Messages</h2>
                 <p class="text-secondary mb-0">Contact and support queries (cards).</p>
               </div>
-              <a class="btn btn-outline-secondary" href="contact.html"><i class="bi bi-envelope me-2"></i>Contact Page</a>
+              <a class="btn btn-outline-secondary" href="contact.html"><i class="bi bi-envelope me-2"></i>Contact
+                Page</a>
             </div>
 
             <div class="row g-3">
@@ -412,4 +448,5 @@
   <script src="assets/js/main.js"></script>
   <script src="assets/js/dashboard.js"></script>
 </body>
+
 </html>
